--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "AvokadoGames/auth-discord",
+  "name": "fof/auth-discord",
   "description": "Allow users to log in with Discord",
   "keywords": [
     "flarum"
