--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "require": {
     "flarum/core": "^1.0.0",
-    "wohali/oauth2-discord-new": "^1.1.0",
-    "fof/extend": ">=1.0.0"
+    "fof/extend": ">=1.0.0",
+    "wohali/oauth2-discord-new": "^1.1.0"
   },
   "authors": [
     {
