--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   },
   "authors": [
     {
-      "name": "David Sevilla Martín",
-      "email": "david.s@redevs.org",
+      "name": "Avokado Games",
+      "email": "contact@avokadogames.com",
       "role": "Developer"
     }
   ],
